# heat_equation_mpi

./: .gitignore  CMakeLists.txt  README.md  animation_generator.py  config.json  main.cpp  matrix.txt  matrix_generator.py
